Poprawineie filtru skóra

--- a/obuwie.html
+++ b/obuwie.html
@@ -430,10 +430,7 @@
         <h5 class="subtitle is-5" style="font-weight: bold;">Materiał</h5>
         <ul>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Dzianina</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra lakierowana</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra syntetyczna</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra naturalna</li>
-          <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra ekologiczna</li>
+          <li><input type="checkbox" name="material" style="margin-right:10px;">Skóra</li>
           <li><input type="checkbox" name="material" style="margin-right:10px;">Tkanina</li>
         </ul>
       </div>
@@ -450,7 +447,7 @@
 <section class="section">
   <div class="columns is-multiline">
     <!-- Produkt 1 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="1" data-name="Białe baleriny" data-price="169.90" data-material="Skóra ekologiczna" data-color="Biały">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="1" data-name="Białe baleriny" data-price="169.90" data-material="Skóra" data-color="Biały">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/baleriny2.png" style="margin-top:10px;"  alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Białe baleriny</figcaption>
@@ -468,7 +465,7 @@
         </figure>
       </div>
     <!-- Produkt 2 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="2" data-name="Czarne botki na platformie" data-price="389.89" data-material="Skóra naturalna" data-color="Czarny">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="2" data-name="Czarne botki na platformie" data-price="389.89" data-material="Skóra" data-color="Czarny">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/botki1.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Czarne botki na platformie</figcaption>
@@ -486,7 +483,7 @@
         </figure>
       </div>
     <!-- Produkt 3 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="3" data-name="Wysokie szpilki ze złotem" data-price="699.90" data-material="Skóra syntetyczna" data-color="Czarny">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="3" data-name="Wysokie szpilki ze złotem" data-price="699.90" data-material="Skóra" data-color="Czarny">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/buty.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Wysokie szpilki ze złotem</figcaption>
@@ -504,7 +501,7 @@
         </figure>
       </div>
     <!-- Produkt 4 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="4" data-name="Wysokie trampki z zamszu" data-price="285.90" data-material="Skóra naturalna" data-color="Beżowy">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="4" data-name="Wysokie trampki z zamszu" data-price="285.90" data-material="Skóra" data-color="Beżowy">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/trampki.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Wysokie trampki z zamszu</figcaption>
@@ -540,7 +537,7 @@
         </figure>
       </div>
     <!-- Produkt 6 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="6" data-name="Różowe lakierowane czółenka" data-price="189.90" data-material="Skóra lakierowana" data-color="Różowy">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="6" data-name="Różowe lakierowane czółenka" data-price="189.90" data-material="Skóra" data-color="Różowy">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/czolenka2.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Różowe lakierowane czółenka</figcaption>
@@ -576,7 +573,7 @@
         </figure>
       </div>
     <!-- Produkt 8 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="8" data-name="Lakierowane baleriny na obcasie" data-price="199.90" data-material="Skóra lakierowana" data-color="Czerwony">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="8" data-name="Lakierowane baleriny na obcasie" data-price="199.90" data-material="Skóra" data-color="Czerwony">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/lakierki.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Lakierowane baleriny na obcasie</figcaption>
@@ -612,7 +609,7 @@
         </figure>
       </div>
     <!-- Produkt 10 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="10" data-name="Złote szpilki motyle" data-price="689.90" data-material="Skóra naturalna" data-color="Złoty">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="10" data-name="Złote szpilki motyle" data-price="689.90" data-material="Skóra" data-color="Złoty">
         <figure class="image is-160x160">
           <img class="is-rounded" src="zdjecia_produktow/shoes.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Złote szpilki motyle</figcaption>
@@ -630,7 +627,7 @@
         </figure>
       </div>
     <!-- Produkt 11 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="11" data-name="Białe sneakersy - niska platforma" data-price="295.89" data-material="Skóra syntetyczna" data-color="Biały">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="11" data-name="Białe sneakersy - niska platforma" data-price="295.89" data-material="Skóra" data-color="Biały">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/sneakersy.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Białe sneakersy - niska platforma</figcaption>
@@ -648,7 +645,7 @@
         </figure>
       </div>
     <!-- Produkt 12 -->
-    <div class="column is-12-mobile is-4-tablet mb-6" data-id="12" data-name="Granatowe szpilki z klamerką" data-price="199.90" data-material="Skóra naturalna" data-color="Niebieski">
+    <div class="column is-12-mobile is-4-tablet mb-6" data-id="12" data-name="Granatowe szpilki z klamerką" data-price="199.90" data-material="Skóra" data-color="Niebieski">
         <figure class="image is-160x160">
           <img  src="zdjecia_produktow/szpilki3.jpg" alt="Obuwie">
           <figcaption class="has-text-centered has-text-weight-bold">Granatowe szpilki z klamerką</figcaption>
